src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }

  input {
    border: 1px solid #ababab;
    border-radius: 5px;
    padding: 2px 5px;
  }

  button {
    color: #ffffff;
    background-color: #353535;
    padding: 2px 10px;
    border-radius: 5px;
  }
  button:hover {
    background-color: #7d7d7d;
  }

  button:disabled {
    color: grey;
    background-color: #ececec;
    cursor: not-allowed;
  }

  .link {
    @apply text-blue-600 underline font-bold;
  }
  .link:hover {
    @apply text-blue-500 underline font-bold;
  }

  h2 {
    @apply text-3xl font-bold mb-4 text-slate-500;
  }
  h3 {
    @apply text-2xl font-bold mb-2;
  }
  p {
    @apply my-2;
  }

  .post-list {
    list-style: none;
    padding: 0;
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
    justify-content: center;
    li {
      position: relative;
      border-radius: 0.5rem;
      overflow: hidden;
      border: 1px solid #ddd;
      width: 260px;
      transition: transform 0.2s ease-in-out;

      a {
        text-decoration: none;
        color: unset;
      }

      &:hover,
      &:has(*:focus),
      &:has(*:active) {
        transform: translate(0px, -6px);
      }

      .post-image {
        display: block;
        width: 100%;
        height: 200px;
      }

      button {
        position: absolute;
        font-size: 1.5rem;
        top: 20px;
        right: 20px;
        background: transparent;
        border: none;
        outline: none;
        &:hover,
        &:focus,
        &:active {
          animation: pulse 1.5s infinite;
        }
      }

      a {
        padding: 10px 10px;
        display: flex;
        gap: 8px;
        flex-direction: column;
        h2 {
          margin: 0;
          font-size: 1.5rem;
          font-weight: bold;
        }
        p {
          margin: 0;
          font-size: 1rem;
          color: #666;
        }
      }
    }
  }
  /* Advanced APIS/Create Portals Exercise */
  .tooltip-container {
    position: absolute;
    pointer-events: none;
    left: 0;
    top: 0px;
    transform: translate3d(var(--x), var(--y), 0);
    z-index: 10;
  }

  .tooltip {
    color: white;
    background: #222;
    border-radius: 4px;
    padding: 4px;
    font-size: 11px;
  }

  /* hooks/Refs Exercise */
  .tilt-root {
    height: 150px;
    background-color: red;
    width: 200px;
    background-image: -webkit-linear-gradient(315deg, #ff00ba 0%, #fae713 100%);
    background-image: linear-gradient(135deg, #ff00ba 0%, #fae713 100%);
    transform-style: preserve-3d;
    will-change: transform;
    transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);
  }
  .tilt-child {
    position: absolute;
    width: 50%;
    height: 50%;
    top: 50%;
    left: 50%;
    transform: translateZ(30px) translateX(-50%) translateY(-50%);
    box-shadow: 0 0 50px 0 rgba(51, 51, 51, 0.3);
    background-color: white;
  }
  .totally-centered {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .count-button {
    width: 100%;
    height: 100%;
    background: transparent;
    border: none;
    font-size: 3em;
  }

  /* hooks/TicTacToe Exercise */
  .game {
    font:
      14px 'Century Gothic',
      Futura,
      sans-serif;
    margin: 20px;
    min-height: 260px;
  }

  .game ol,
  .game ul {
    padding-left: 30px;
  }

  .board-row:after {
    clear: both;
    content: '';
    display: table;
  }

  .status {
    margin-bottom: 10px;
  }

  .restart {
    margin-top: 10px;
  }

  .square {
    background: #fff;
    border: 1px solid #999;
    float: left;
    font-size: 16px;
    font-weight: bold;
    line-height: 34px;
    height: 34px;
    margin-right: -1px;
    margin-top: -1px;
    padding: 0;
    text-align: center;
    width: 34px;
    color: #171717;
  }

  .square:focus {
    outline: none;
    background: #ddd;
  }

  .game {
    display: flex;
    flex-direction: row;
  }

  .game-info {
    margin-left: 20px;
    min-width: 190px;
  }
}

@keyframes pulse {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.3);
  }
  100% {
    transform: scale(1);
  }
}

/* Exercises/Advanced APIS/use-imperative-handle */
.messaging-app {
  max-width: 350px;
  margin: auto;
}

.messaging-app [role='log'] {
  margin: auto;
  height: 300px;
  overflow-y: scroll;
  width: 300px;
  outline: 1px solid black;
  padding: 30px 10px;
}

.messaging-app [role='log'] hr {
  margin-top: 8px;
  margin-bottom: 8px;
}

.ship-buttons {
  display: flex;
  justify-content: space-between;
  width: 300px;
  padding-bottom: 10px;
}

.ship-buttons button {
  border-radius: 2px;
  padding: 2px 4px;
  font-size: 0.75rem;
  background-color: white;
  color: black;
  &:not(.active) {
    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
  }
  &.active {
    box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.5);
  }
}

.app {
  display: flex;
  max-width: 1024px;
  border: 1px solid #000;
  border-start-end-radius: 0.5rem;
  border-start-start-radius: 0.5rem;
  border-end-start-radius: 50% 8%;
  border-end-end-radius: 50% 8%;
  overflow: hidden;
}

.search {
  width: 150px;
  max-height: 400px;
  overflow: hidden;
  display: flex;
  flex-direction: column;

  input {
    width: 100%;
    border: 0;
    border-bottom: 1px solid #000;
    padding: 8px;
    line-height: 1.5;
    border-top-left-radius: 0.5rem;
  }

  ul {
    flex: 1;
    list-style: none;
    padding: 4px;
    padding-bottom: 30px;
    margin: 0;
    display: flex;
    flex-direction: column;
    gap: 8px;
    overflow-y: auto;
    li {
      button {
        display: flex;
        align-items: center;
        gap: 4px;
        border: none;
        background-color: transparent;
        &:hover {
          text-decoration: underline;
        }
        img {
          width: 20px;
          height: 20px;
          object-fit: contain;
          border-radius: 50%;
        }
      }
    }
  }
}

.details {
  flex: 1;
  height: 400px;
  position: relative;
  overflow: hidden;
}

.ship-info {
  height: 100%;
  width: 300px;
  margin: auto;
  overflow: auto;
  background-color: #eee;
  border-radius: 4px;
  padding: 20px;
  position: relative;
}

.ship-info.ship-loading {
  opacity: 0.6;
}

.ship-info h2 {
  font-weight: bold;
  text-align: center;
  margin-top: 0.3em;
}

.ship-info img {
  width: 100%;
  height: 100%;
  aspect-ratio: 1;
  object-fit: contain;
}

.ship-info .ship-info__img-wrapper {
  margin-top: 20px;
  width: 100%;
  height: 200px;
}

.ship-info .ship-info__fetch-time {
  position: absolute;
  top: 6px;
  right: 10px;
}

.app-error {
  position: relative;
  background-image: url('/img/broken-ship.webp');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 400px;
  height: 400px;
  p {
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    padding: 6px 12px;
    border-radius: 1rem;
    font-size: 1.5rem;
    font-weight: bold;
    width: 300px;
    text-align: center;
  }
}

